--- a/src/views/auth/perfil.hbs
+++ b/src/views/auth/perfil.hbs
@@ -13,7 +13,7 @@
                             <div class="card-head">
                                 <h3 class="card-title font-weight-bold mb-2 p-3">
                                     <p>Bienvenido!</p>
-                                    <p class="font-weight-lighter">{{userData.nombre}} {{userData.apellido}}</p>
+                                    <p class="font-weight-lighter">{{user.nombre_completo}}</p>
                                 </h3>
                             </div>
                             <div class="card-body">
