--- a/src/views/partials/message.hbs
+++ b/src/views/partials/message.hbs
@@ -14,7 +14,7 @@
 </div>
 {{/if}}
 
-{{!-- {{#if success}}
+{{#if success}}
 <div style="padding-bottom: 0!important;" class="container p-1">
     <div class="row">
         <div class="col-md-4 mx-auto">
@@ -28,4 +28,4 @@
         </div>
     </div>
 </div>
-{{/if}} --}}
+{{/if}}
